spec/.test/config/valid/only/mappers.php
<?php

return [
    'mappers' => [
        Test\SomeInterface1::class => 'mapper31',
        Test\SomeInterface2::class => 'mapper32',
    ],
];
