spec/.test/config/invalid/mappers.php
<?php

return [
    'parameters' => [],
    'aliases' => [],
    'factories' => [],
    'extensions' => [],
    'tags' => [],
    'metadata' => [],
    'passes' => [],
    'mappers' => 1,
];
